--- a/src/main/resources/templates/update-feature.html
+++ b/src/main/resources/templates/update-feature.html
@@ -1,2 +1,2 @@
-<div th:replace="features :: features"></div>
-<div th:replace="features :: feature"></div>
+<div th:replace="~{features :: features}"></div>
+<div th:replace="~{features :: feature}"></div>
