--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,12 +1,22 @@
 <html lang="en">
 <head>
     <title>Error</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <script src="/webjars/htmx.org/2.0.3/dist/htmx.min.js"></script>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
-<h1>Error</h1>
-<div id="error" th:fragment="error">
-    <p th:if="${error}" th:text="${error}">Error</p>
+<div class="card">
+    <h1>Error</h1>
+    <button class="btn btn-primary" onclick="history.back()">Back</button>
+</div>
+<div id="error" th:fragment="error" hx-swap-oob="true">
+    <div class="error" th:if="${error}">
+        <!--/*@thymesVar id="error" type="java.lang.String"*/-->
+        <p th:text="${error}">Error</p>
+        <button class="btn" onclick="// noinspection JSValidateTypes
+htmx.find('#error .error').remove();">Close
+        </button>
+    </div>
 </div>
 </body>
 </html>
