--- a/src/main/resources/templates/task-edit.html
+++ b/src/main/resources/templates/task-edit.html
@@ -1,7 +1,9 @@
-<form id="task" hx-swap-oob="true">
-    <label for="name">Name: </label><input id="name" name="name" th:value="${task.name}">
-    <label for="description">Name: </label><input id="description" name="description" th:value="${task.description}">
+<form class="card" id="task" hx-swap-oob="true">
+    <label for="name">Name: </label>
+    <input class="form-input" id="name" name="name" th:value="${task.name}">
+    <label for="description">Description: </label>
+    <input class="form-input" id="description" name="description" th:value="${task.description}">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    <button th:hx-patch="@{/tasks/{id}(id=${task.id})}">Submit</button>
-    <button th:hx-get="@{/tasks/{id}(id=${task.id})}">Cancel</button>
+    <button class="btn btn-primary" th:hx-patch="@{/tasks/{id}(id=${task.id})}">Submit</button>
+    <button class="btn" th:hx-get="@{/tasks/{id}(id=${task.id})}">Cancel</button>
 </form>
