--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -1,18 +1,16 @@
 <html lang="en">
 <head>
     <title>Task</title>
-    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
-    <script src="https://unpkg.com/htmx-ext-response-targets@2.0.0/response-targets.js"></script>
-    <link rel="stylesheet" href="styles.css"/>
+    <script src="/webjars/htmx.org/2.0.3/dist/htmx.min.js"></script>
+    <script src="/webjars/htmx.org/2.0.3/dist/ext/response-targets.js"></script>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body hx-ext="response-targets" hx-target-error="#error" hx-swap="none">
-<div id="task" th:fragment="task" hx-swap-oob="true">
+<div id="task" class="card" th:fragment="task" hx-swap-oob="true">
     <h1 th:text="${task.name}">Task</h1>
     <p th:text="${task.description}">Description</p>
-    <button th:hx-get="@{/tasks/{id}/edit(id=${task.id})}">Edit</button>
+    <button class="btn" th:hx-get="@{/tasks/{id}/edit(id=${task.id})}">Edit</button>
 </div>
-<div id="error" th:fragment="error" hx-swap-oob="true">
-    <p th:if="${error}" th:text="${error}">Error</p>
-</div>
+<div th:replace="error :: error"></div>
 </body>
 </html>
