--- a/src/main/resources/templates/task-edit.html
+++ b/src/main/resources/templates/task-edit.html
@@ -2,8 +2,9 @@
     <label for="name">Name: </label>
     <input class="form-input" id="name" name="name" th:value="${task.name}">
     <label for="description">Description: </label>
-    <input class="form-input" id="description" name="description" th:value="${task.description}">
+    <textarea class="form-input" id="description" name="description" th:value="${task.description}"></textarea>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     <button class="btn btn-primary" th:hx-patch="@{/tasks/{id}(id=${task.id})}">Submit</button>
     <button class="btn" th:hx-get="@{/tasks/{id}(id=${task.id})}">Cancel</button>
+    <script>initRichtext('#description');</script>
 </form>
