--- a/src/main/resources/templates/features.html
+++ b/src/main/resources/templates/features.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Features</title>
     <script src="/webjars/htmx.org/2.0.3/dist/htmx.min.js"></script>
     <script src="/webjars/htmx.org/2.0.3/dist/ext/response-targets.js"></script>
+    <script src="/webjars/tinymce/7.5.1/tinymce.min.js"></script>
+    <script src="/script.js"></script>
     <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body hx-ext="response-targets" hx-target-error="#error" hx-swap="none">
@@ -21,16 +24,17 @@
         <label for="name">Name: </label>
         <input class="form-input" type="text" name="name" id="name"/>
         <label for="description">Description: </label>
-        <input class="form-input" type="text" name="description" id="description"/>
+        <textarea class="form-input" name="description" id="description"></textarea>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <button class="btn btn-primary" type="submit">Create</button>
+        <script>initRichtext('#description');</script>
     </form>
 </div>
 <!--/*@thymesVar id="feature" type="ch.chrigu.gmf.givemefeatures.features.web.ui.FeatureDetailView"*/-->
 <div th:fragment="feature" id="feature" hx-swap-oob="true">
     <div class="card" th:if="${feature}">
         <h2 th:text="${feature.name}">Feature</h2>
-        <p th:text="${feature.description}">Feature description</p>
+        <p th:utext="${feature.description}">Feature description</p>
         <h3>Tasks</h3>
         <ul class="list task-list">
             <li class="list-item" th:each="task : ${feature.tasks}"><a class="list-link" th:href="@{/tasks/{id}(id=${task.id})}" th:text="${task.name}">Task</a></li>
@@ -44,6 +48,6 @@
         </form>
     </div>
 </div>
-<div th:replace="error :: error"></div>
+<div th:replace="~{error :: error}"></div>
 </body>
 </html>
