--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -11,7 +11,7 @@
 <body hx-ext="response-targets" hx-target-error="#error" hx-swap="none">
 <div id="task" class="card" th:fragment="task" hx-swap-oob="true">
     <h1 th:text="${task.name}">Task</h1>
-    <p th:utext="${task.description}">Description</p>
+    <th:block th:utext="${task.description}">Description</th:block>
     <button class="btn" th:hx-get="@{/tasks/{id}/edit(id=${task.id})}">Edit</button>
 </div>
 <div class="card">
