--- a/src/main/css/input.css
+++ b/src/main/css/input.css
@@ -152,30 +152,42 @@ form label {
     @apply animate-spin rounded-full h-16 w-16 border-t-4 border-b-4 border-blue-500
 }
 
-/* Markdown specifications are contained in the class "description" */
-.description li {
+/* Markdown specifications are contained in the class "richtext" */
+.richtext li {
     @apply list-item list-inside cursor-auto border-0;
 }
 
-.description ul li {
+.richtext ul li {
     @apply list-disc;
 }
 
-.description ol li {
+.richtext ol li {
     @apply list-decimal;
 }
 
-.description table,
-.description tr,
-.description td,
-.description th {
+.richtext table,
+.richtext tr,
+.richtext td,
+.richtext th {
     @apply table-auto border border-solid py-1 px-2 text-left border-green-600;
 }
 
-.description {
+.richtext {
     @apply border-hidden border border-green-600 px-5 py-2 rounded-md bg-green-50 leading-7
 }
 
-.description blockquote {
-    @apply p-4 my-4 border-solid border border-l-4 bg-green-100 border-solid border-green-600
+.richtext blockquote {
+    @apply p-4 my-4 border-solid border border-l-4 bg-green-100 border-green-600
+}
+
+.richtext a {
+    @apply font-medium text-blue-600 hover:underline dark:text-blue-500;
+}
+
+.richtext pre code {
+    @apply block border border-gray-300 p-4;
+}
+
+.richtext code {
+    @apply bg-gray-200;
 }
