--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -36,6 +36,7 @@
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --font-weight-medium: 500;
     --font-weight-bold: 700;
     --radius-sm: 0.25rem;
     --radius-md: 0.375rem;
@@ -202,6 +203,9 @@
   }
   .hidden {
     display: none;
+  }
+  .inline {
+    display: inline;
   }
   .table {
     display: table;
@@ -533,20 +537,20 @@ form label {
   border-bottom-width: 4px;
   border-color: var(--color-blue-500);
 }
-.description li {
+.richtext li {
   display: list-item;
   cursor: auto;
   list-style-position: inside;
   border-style: var(--tw-border-style);
   border-width: 0px;
 }
-.description ul li {
+.richtext ul li {
   list-style-type: disc;
 }
-.description ol li {
+.richtext ol li {
   list-style-type: decimal;
 }
-.description table, .description tr, .description td, .description th {
+.richtext table, .richtext tr, .richtext td, .richtext th {
   table-layout: auto;
   border-style: var(--tw-border-style);
   border-width: 1px;
@@ -557,7 +561,7 @@ form label {
   padding-block: calc(var(--spacing) * 1);
   text-align: left;
 }
-.description {
+.richtext {
   border-radius: var(--radius-md);
   border-style: var(--tw-border-style);
   border-width: 1px;
@@ -570,7 +574,7 @@ form label {
   --tw-leading: calc(var(--spacing) * 7);
   line-height: calc(var(--spacing) * 7);
 }
-.description blockquote {
+.richtext blockquote {
   margin-block: calc(var(--spacing) * 4);
   border-style: var(--tw-border-style);
   border-width: 1px;
@@ -581,6 +585,29 @@ form label {
   border-color: var(--color-green-600);
   background-color: var(--color-green-100);
   padding: calc(var(--spacing) * 4);
+}
+.richtext a {
+  --tw-font-weight: var(--font-weight-medium);
+  font-weight: var(--font-weight-medium);
+  color: var(--color-blue-600);
+  &:hover {
+    @media (hover: hover) {
+      text-decoration-line: underline;
+    }
+  }
+  @media (prefers-color-scheme: dark) {
+    color: var(--color-blue-500);
+  }
+}
+.richtext pre code {
+  display: block;
+  border-style: var(--tw-border-style);
+  border-width: 1px;
+  border-color: var(--color-gray-300);
+  padding: calc(var(--spacing) * 4);
+}
+.richtext code {
+  background-color: var(--color-gray-200);
 }
 @property --tw-border-style {
   syntax: "*";
