--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -197,9 +197,6 @@
   }
 }
 @layer utilities {
-  .mt-2 {
-    margin-top: calc(var(--spacing) * 2);
-  }
   .block {
     display: block;
   }
@@ -219,16 +216,9 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .text-sm {
-    font-size: var(--text-sm);
-    line-height: var(--tw-leading, var(--text-sm--line-height));
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
-  }
-  .text-gray-700 {
-    color: var(--color-gray-700);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
@@ -649,6 +639,13 @@ form label {
   --tw-ease: var(--ease-out);
   transition-timing-function: var(--ease-out);
   width: var(--progress);
+}
+.progressbar-text {
+  margin-top: calc(var(--spacing) * 1);
+  margin-bottom: calc(var(--spacing) * 3);
+  font-size: var(--text-sm);
+  line-height: var(--tw-leading, var(--text-sm--line-height));
+  color: var(--color-gray-700);
 }
 @property --tw-border-style {
   syntax: "*";
